# aiscrub

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  aiscrub.py  build.ps1  build.sh  pyproject.toml
.github/workflows/: release.yml
